--- a/index.html
+++ b/index.html
@@ -12,35 +12,23 @@
     <link rel="stylesheet" href="css/horizontal-menu.css" />
     <link rel="manifest" href="manifest.json">
 
+    <base target="_parent">
 </head>
-<body>
-        <span id="titulo">
-                Grupo Ferran
-        </span>
+<body style="background-color: #002856">
         <ul id="mainMenu">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="https://www.grupoferran.com/" target="_self">Inmuebles</a></li>
-                <li><a href="#">Indicadores</a></li>
-                <li><a href="https://www.grupoferran.com/contactanos" target="_self">Contacto</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="https://www.grupoferran.com/" target="principal">Inicio</a></li>
+                <li><a href="https://www.grupoferran.com/desarrollos-y-disponibilidad-de-inmuebles" target="principal">Inmuebles</a></li>
+                <li><a href="html/indicadores.html" target="principal">Indicadores</a></li>
+                <li><a href="https://www.grupoferran.com/contactanos" target="principal">Contacto</a></li>
+                <li><a href="html/ingreso.html" target="principal">Login</a></li>
         </ul>
 
-        <img id="encFerr" 
-
-                srcset="img/Encabezado4x.png 1600w, 
-                        img/Encabezado3x.png 1000w, 
-                        img/Encabezado2x.png 800w, 
-                        img/Encabezado1x.png 500w"
-
-                sizes="100vw"
-
-                src="img/Encabezado1x.png" alt="Encabezado Grupo Ferran">
+        <iframe src="https://www.grupoferran.com/" name="principal">Su navegador no soporta iframes</iframe>
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
-    <script src="js/libs/jquery.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
+        <script src="js/libs/jquery.js"></script>
 </body>
 </html>
